Cypsis: Fix some issue's 5-7

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -12,199 +12,192 @@ select:focus,
 input[type='file']:focus,
 input[type='radio']:focus,
 input[type='checkbox']:focus {
-	outline: 0 !important;
+  outline: 0 !important;
 }
 .kgooglemap {
-	width: 100%;
-	display: block;
-	height: 480px;
-	overflow: hidden;
-	position: relative;
-	img {
-		max-width: none !important;
-		}
+  width: 100%;
+  display: block;
+  height: 480px;
+  overflow: hidden;
+  position: relative;
+  img {
+    max-width: none !important;
+  }
 }
 .knewchar {
-	padding-left: 3px;
+  padding-left: 3px;
 }
 .kfrontend {
-	margin-top:20px;
+  margin-top:20px;
 }
 .kfrontend:hover .btn,
 .kprofile:hover .kinfo,
 .kprofile:hover .kinfo1 {
-	visibility: visible;
+  visibility: visible;
 }
 .kfrontend .btn,
 .kprofile .kinfo,
 .kprofile .kinfo1 {
-	visibility: hidden;
+  visibility: hidden;
 }
 .navbar-inner {
-	padding-left:0px;
+  padding-left:0px;
 }
 .table th,
 .table td {
-	vertical-align: middle !important;
+  vertical-align: middle !important;
 }
 .navbar .nav > li > a {
-	padding: 11px 8px 11px;
+  padding: 11px 8px 11px;
 }
 #tow {
-	display: none;
+  display: none;
 }
 #messages li {
-	float: left;
-	margin-bottom: 30px;
-	padding-bottom: 30px;
+  float: left;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
 }
 .message {
-	margin: 20px 0;
+  margin: 20px 0;
 }
 .btn-marging {
-	margin: 0;
+  margin: 0;
 }
 .kreply-form {
-	display: none;
-	margin-left: 20px;
-	margin-bottom:30px;
-	box-shadow: 0 0 6px #B2B2B2;
+  display: none;
+  margin-left: 20px;
+  margin-bottom:30px;
+  box-shadow: 0 0 6px #B2B2B2;
 }
 .kmsgattach {
-	padding-left: 30px;
-	padding-top: 10px;
+  padding-left: 30px;
+  padding-top: 10px;
 }
- .kattach {
- 	margin-bottom: -20px;
- 	margin-top: -20px;
- }
 .pagination {
-	margin: 0;
+  margin: 0;
 }
 .kavatar {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {
-	color: #fff !important;
+  color: #fff !important;
 }
 .kfile-input-textbox {
-	display: inline-block;
+  display: inline-block;
 }
 .kfile-hide {
-	position: relative;
-	width: 100px;
-	height: 23px;
-	overflow: hidden;
+  position: relative;
+  width: 100px;
+  height: 23px;
+  overflow: hidden;
 }
 .kattachment {
-	padding-top: 5px;
+  padding-top: 5px;
 }
 .kattachment-insert {
-	margin-left: 20px;
+  margin-left: 20px;
 }
 .kfile-input {
-	font-size: 23px;
-	position: absolute;
-	right: 0px;
-	top: -10px;
-	opacity: 0;
-	filter: alpha(opacity=0);
+  font-size: 23px;
+  position: absolute;
+  right: 0px;
+  top: -10px;
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
 #kbbcode-filelist {
-	padding: 0;
-	list-style: none;
-	margin: 0;
+  padding: 0;
+  list-style: none;
+  margin: 0;
 }
 #kbbcode-filelist .file-invalid {
-	cursor: pointer;
-	padding-left: 48px;
-	line-height: 24px;
-	margin-bottom: 1px;
+  cursor: pointer;
+  padding-left: 48px;
+  line-height: 24px;
+  margin-bottom: 1px;
 }
 #kbbcode-filelist .file-invalid span {
-	padding: 1px;
+  padding: 1px;
 }
 #kbbcode-filelist .file {
-	line-height: 2em;
-	padding-left: 22px;
+  line-height: 2em;
+  padding-left: 22px;
 }
 #kbbcode-filelist .file span,
 #kbbcode-filelist .file a {
-	padding: 0 4px;
+  padding: 0 4px;
 }
 #kbbcode-filelist .file .file-progress {
-	width: 125px;
-	height: 12px;
-	vertical-align: middle;
+  width: 125px;
+  height: 12px;
+  vertical-align: middle;
 }
 img {
-	max-width: 100%;
-	width: auto \9;
-	height: auto;
+  max-width: 100%;
+  width: auto \9;
+  height: auto;
 }
 .table {
-	float:left;
+  float:left;
 }
 .form-search {
-	margin: 0px;
+  margin: 0px;
 }
 .progress {
-	margin-bottom:0px;
+  margin-bottom:0px;
 }
 .kpoll {
-	padding-left:90px;
+  padding-left:90px;
 }
 .img-polaroid {
-	border-color: #ddd;
-	border-radius: 4px;
+  border-color: #ddd;
+  border-radius: 4px;
 }
 .topic-starter {
-		background: rgba(229,229,229,0.4);
-		display: inline-block;
-		height: 15px;
-		line-height: 0.8em;
-		border-radius: 0 0 4px 4px;
-		white-space: nowrap;
-		padding-top: 4px;
-		border: 1px solid #ddd;
-		border-top: 0 none;
-		padding-left: 8px;
-		padding-right: 8px;
+  background: rgba(229,229,229,0.4);
+  display: inline-block;
+  height: 15px;
+  line-height: 0.8em;
+  border-radius: 0 0 4px 4px;
+  white-space: nowrap;
+  padding-top: 4px;
+  border: 1px solid #ddd;
+  border-top: 0 none;
+  padding-left: 8px;
+  padding-right: 8px;
 
-		&.topic-starter:after {
-			content: "Topic Author";
-			color: #3a87ad;
-			line-height: 1em;
-			font-size: 10px;
-			font-weight: bold;
-			text-transform: uppercase;
-		}
-	}
-select, textarea, input[type='text'], input[type='password'], input[type='datetime'], input[type='datetime-local'], input[type='date'], input[type='month'], input[type='time'], input[type='week'], input[type='number'], input[type='email'], input[type='url'], input[type='search'], input[type='tel'], input[type='color'], .uneditable-input {
-	margin-bottom:0px;
+  &.topic-starter:after {
+    content: "Topic Author";
+    color: #3a87ad;
+    line-height: 1em;
+    font-size: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
 hr {
-	margin:0px;
+  margin:0px;
 }
 .active.btn-success {
-	background-color:transparent;
-	background-image:none;
+  background-color:transparent;
+  background-image:none;
 }
 form > table > thead > tr > td > ul {
-	margin:auto;
+  margin:auto;
 }
 .table th {
-	border-bottom: 1px solid rgba(255, 255, 255, 0.07);
-	border-top:0px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.07);
+  border-top:0px;
 }
 .profile-avatar {
-	margin:5px;
+  margin:5px;
 }
 .profilebox {
-	margin-top: -4px;
-	width: 106%;
+  margin-top: -4px;
+  width: 106%;
 }
 .kfrontend h1,
 .kfrontend h2,
@@ -213,20 +206,20 @@ form > table > thead > tr > td > ul {
 .kfrontend h5,
 .kfrontend h6,
 .kfrontend h7 {
-	margin:5px !important;
+  margin:5px !important;
 }
 ul li {
-	list-style:none;
+  list-style:none;
 }
 .kbuttons .inline {
-	padding: 5px 0;
-	clear: both;
-	li {
-		padding: 0;
-	}
+  padding: 5px 0;
+  clear: both;
+  li {
+    padding: 0;
+  }
 }
 .labels, .numbers {
-	padding: 0;
+  padding: 0;
 }
 .modal-header,
 .modal-body,
@@ -234,62 +227,62 @@ ul li {
   padding: 15px;
 }
 .topictitle {
-	font-size: 120%;
+  font-size: 120%;
 }
 .replies, .repliesnum {
-	font-size: 110%;
+  font-size: 110%;
 }
 .breadcrumb {
-	padding:8px 15px;
+  padding:8px 15px;
 }
 input[type='checkbox'] {
-	zoom: 1;
-	filter: alpha(opacity=50);
-	opacity:0.5;
+  zoom: 1;
+  filter: alpha(opacity=50);
+  opacity:0.5;
 }
 a:focus,
 .btn:focus {
-	outline: none !important;
+  outline: none !important;
 }
 .qreply {
-	min-height:150px !important;
-	width:98%;
+  min-height:150px !important;
+  width:98%;
 }
 .padding-table,
 .last-post,
 .header-desc {
-	padding: 4px 8px;
+  padding: 4px 8px;
 }
 .desc {
-	display: block;
+  display: block;
 }
 [class*="badger"] {
-    position: relative;
-    margin: 15px 0;
-    padding: 39px 19px 0 14px;
-    border-radius: 4px;
-	min-height:180px;
-	border: 1px solid #ddd;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  position: relative;
+  margin: 15px 0;
+  padding: 39px 19px 0 14px;
+  border-radius: 4px;
+  min-height:180px;
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 [class*="badger"]:after {
- 	content: attr(data-badger);
-    position: absolute;
-    top: 0;
-    padding: 8px 12px;
-    font-weight: bold;
-	border-right:1px solid #ddd;
-	border-bottom:1px solid #ddd;
+  content: attr(data-badger);
+  position: absolute;
+  top: 0;
+  padding: 8px 12px;
+  font-weight: bold;
+  border-right:1px solid #ddd;
+  border-bottom:1px solid #ddd;
 }
 .badger-left:after {
-    left: 0;
-    border-radius: 4px 0 4px 0;
+  left: 0;
+  border-radius: 4px 0 4px 0;
 }
 .badger-info:after {
-	background: rgba(229, 229, 229, 0.4);
+  background: rgba(229, 229, 229, 0.4);
 }
 legend {
-	color:inherit;
+  color:inherit;
 }
 div.kmsgtext-article,
 div.kmsgtext-quote,
@@ -302,20 +295,20 @@ div.kmsgtext-confidential {
   -moz-tab-size: 4;
   tab-size: 4;
   border-radius: 3px;
-	display: block;
-	border: 1px dotted;
-	margin: 5px;
-	padding: 5px;
-	font-style: italic;
+  display: block;
+  border: 1px dotted;
+  margin: 5px;
+  padding: 5px;
+  font-style: italic;
 }
 #kwho > div > p,
 #kstats > div > p {
-	margin:0px;
+  margin:0px;
 }
 .msgfooter {
-	bottom: 0;
-	padding: 10px 5px;
-	height:20px;
+  bottom: 0;
+  padding: 10px 5px;
+  height:20px;
 }
 #nav1 > li {
   float: left;
@@ -328,174 +321,173 @@ div.kmsgtext-confidential {
   text-shadow: 0 1px 0 #ffffff;
 }
 .knewchar {
-	color:green;
+  color:green;
 }
 form {
   margin: 0 0 10px 0;
 }
 .timefilter {
-	padding-right:10px;
+  padding-right:10px;
 }
 .kmsg {
   height:100%;
   margin: 20px 0px;
 }
 .input-xxlarge {
-	width:98%;
-	height:100%;
+  width:98%;
+  height:100%;
 }
 .kprofile-down {
-	margin-top:13px;
-	border:1px solid rgba(0, 0, 0, 0.1);
-	background: rgba(0, 0, 0, 0.02);
-	border-radius:5px;
+  margin-top:13px;
+  border:1px solid rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.02);
+  border-radius:5px;
 }
 ul, ol {
-	padding:0;
+  padding:0;
 }
 
 .dl-horizontal dt {
-	width:auto;
+  width:auto;
 }
 .row-fluid > .span12 > .row-fluid > .span12  {
-	width:110%;
-	margin-right:-60px;
+  width:110%;
+  margin-right:-60px;
 }
 #sel {
-width: 100px;
+  width: 100px;
 }
 #kchecktarget:disabled {
-display:none;
+  display:none;
 }
 div.navbar > div > div.visible-phone.hidden-tablet > ul {
   padding-top:0;
   padding-left: 10px;
-	margin-top:5px;
+  margin-top:5px;
 }
 #ktopicsform {
-	padding-bottom:10px;
+  padding-bottom:10px;
 }
 .last-post-message {
-	padding-left:30%;
-	vertical-align:middle !important;
+  padding-left:30%;
+  vertical-align:middle !important;
 }
 .topic-item-unread {
-	border-left:3px solid green;
-	border-radius:2px 0 2px 0;
+  border-left:3px solid green;
+  border-radius:2px 0 2px 0;
 }
 .kmessage {
-	min-height: 120px;
-	padding-bottom:10px;
+  min-height: 120px;
+  padding-bottom:10px;
 }
 .ksig {
-	margin:5px;
-	min-height:20px;
-	padding-bottom:15px;
+  margin:5px;
+  min-height:20px;
 }
 .ksignature {
-	margin-top:15px;
+  margin-top:15px;
 }
 .vid {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-		height: 0;
-		overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
 
 .vid iframe,
 .vid object,
 .vid embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .khistory {
-	min-height:150px;
+  min-height:150px;
 }
 #kchecktask {
-	margin:0
+  margin:0
 }
 @media (max-width: 480px) {
- .pagination .test ul > li > a, .pagination ul > li > span {
-	display:none;
- }
- [class*="badger"] {
+  .pagination .test ul > li > a, .pagination ul > li > span {
+    display:none;
+  }
+  [class*="badger"] {
     padding: 25% 19px 14px;
- }
- .form-search {
-	padding-bottom:0;
- }
- .msgfooter {
-	 width:85%;
- }
- .pull-right,
- span > form {
-	 float:none;
- }
- .table td.span1, .table th.span1 {
-	 width:0;
- }
- div.navbar > div > div.visible-phone.hidden-tablet > ul.nav.navbar-nav.pull-left > a > i {
-	 cursor:pointer;
-	 vertical-align:super;
- }
- #postform > div > div > div > fieldset > div > div {
-	 margin-left:-8px;
- }
- .last-post-message {
-	padding-left:5px;
- }
- #postcatid {
-	 width:100%;
- }
- .input-xxlarge {
-	 width:94%;
- }
- .kfile-input-textbox {
-	 width:52%;
- }
- .kattachment-remove,
- .kattachment-insert {
-	 margin-left:15px;
-	 margin-top:10px;
- }
+  }
+  .form-search {
+    padding-bottom:0;
+  }
+  .msgfooter {
+    width:85%;
+  }
+  .pull-right,
+  span > form {
+    float:none;
+  }
+  .table td.span1, .table th.span1 {
+    width:0;
+  }
+  div.navbar > div > div.visible-phone.hidden-tablet > ul.nav.navbar-nav.pull-left > a > i {
+    cursor:pointer;
+    vertical-align:super;
+  }
+  #postform > div > div > div > fieldset > div > div {
+    margin-left:-8px;
+  }
+  .last-post-message {
+    padding-left:5px;
+  }
+  #postcatid {
+    width:100%;
+  }
+  .input-xxlarge {
+    width:94%;
+  }
+  .kfile-input-textbox {
+    width:52%;
+  }
+  .kattachment-remove,
+  .kattachment-insert {
+    margin-left:15px;
+    margin-top:10px;
+  }
 }
 @media (max-width: 320px) {
-	#postform .btn {
-		width:60%;
-		margin-bottom:10px;
-	}
+  #postform .btn {
+    width:60%;
+    margin-bottom:10px;
+  }
 }
 select#mode {
-margin-left: 65px;
+  margin-left: 65px;
 }
 
 .message-deleted {
-	background-color:rgba(0, 0, 0, 0.1);
-	padding:10px;
-	margin-bottom:15px;
-	border-radius:5px;
+  background-color:rgba(0, 0, 0, 0.1);
+  padding:10px;
+  margin-bottom:15px;
+  border-radius:5px;
 }
 .post-image {
-	float: left;
-	margin-right: 10px;
-	padding-top:2%;
-	padding-bottom:2%;
+  float: left;
+  margin-right: 10px;
+  padding-top:2%;
+  padding-bottom:2%;
 }
 .img-thumbnail {
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 8px;
-	border:1px solid #ddd;
-	padding:4px;
-	position: relative;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  border:1px solid #ddd;
+  padding:4px;
+  position: relative;
 }
 .row-fluid {
   ul.thumbnails {
-  	word-break: break-all;
+    word-break: break-all;
     li.span12 + li { margin-left : 0px; }
     li.span6:nth-child(2n + 3) { margin-left : 0px; }
     li.span4:nth-child(3n + 4) { margin-left : 0px; }
@@ -505,8 +497,14 @@ margin-left: 65px;
   }
 }
 .message-deleted {
-	background-color:rgba(0, 0, 0, 0.1);
-	padding:8px;
-	margin-bottom:15px;
-	border-radius:5px;
+  background-color:rgba(0, 0, 0, 0.1);
+  padding:8px;
+  margin-bottom:15px;
+  border-radius:5px;
+}
+.input-append {
+  margin:0;
+}
+.kattach .thumbnails > li {
+  margin-bottom:0;
 }
