--- a/components/com_kunena/site/template/crypsis/less/icons.less
+++ b/components/com_kunena/site/template/crypsis/less/icons.less
@@ -91,6 +91,12 @@ div.krss-block {
 	width: 32px;
 	height: 32px;
 }
+.kunreadforum,
+.knotloginforum {
+  background: url("icons/folder.png") no-repeat left center;
+  width: 32px;
+  height: 32px;
+}
 .kunreadforum-sm {
 	background: url("icons/folder_sm.png") no-repeat left center;
 	width: 12px;
