Cypsis: Fix pagination

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -74,6 +74,9 @@ input[type='checkbox']:focus {
   padding-left: 30px;
   padding-top: 10px;
 }
+.pagination {
+  margin:3px 0;
+}
 .kavatar {
   vertical-align: middle;
 }
