Crypsis: All around layout fixes.

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -235,12 +235,13 @@ input[type=radio] + label {
 	margin:-2px;
 	padding: 4px 12px;
 	background-color: transparent;
-	border-color: #ddd;
+	border:1px solid rgba(0, 0, 0, 0.0);
+	border-radius:4px;
 }
 input[type=radio]:checked + label {
 	background-image: none;
 	background-color:rgba(0, 0, 0, 0.07);
-	border:1px solid rgba(0, 0, 0, 0.2);;
+	border:1px solid rgba(0, 0, 0, 0.2);
 	border-radius:4px;
 }
 label img{
