General improvements to less files and a few placeholders.

--- a/components/com_kunena/site/template/crypsis/less/crypsis.less
+++ b/components/com_kunena/site/template/crypsis/less/crypsis.less
@@ -13,13 +13,15 @@
  * Less parser will automatically search for all the files from the lookup paths and use the first match.
  */
 #kunena.layout {
-	@import 'custom';
-	@import 'general';
-	@import 'editor';
-	@import 'icons';
-	@import 'user';
-	@import 'profile';
-	@import 'categories';
-	@import 'mediaqueries';
+	//@import 'custom.less';
+	@import 'variables.less';
+	@import 'quirks.less';
+	@import 'general.less';
+	@import 'editor.less';
+	@import 'icons.less';
+	@import 'user.less';
+	@import 'profile.less';
+	@import 'categories.less';
+	@import 'mediaqueries.less';
 /*	@import 'debug'; */
 }
