--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -687,3 +687,16 @@ table .well {
 .dropdown-menu .form-inline {
 	margin: 15px 0;
 }
+
+.profile-expand .content ul {
+	margin:0;
+}
+
+.inline > li {
+	float:left;
+	padding-right: 5px;
+}
+
+#kbbcode-poll-options {
+	margin: 20px 0;
+}
