--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -63,8 +63,8 @@ input[type='checkbox']:focus {
 	padding-left: 3px;
 }
 
-.kfrontend {
-	margin-top: 20px;
+.kfrontend .section {
+	margin-bottom: 20px;
 }
 
 .kfrontend:hover .btn,
@@ -119,10 +119,6 @@ input[type='checkbox']:focus {
 
 .pagination {
 	margin: 3px 0;
-}
-
-.kavatar {
-	vertical-align: middle;
 }
 
 .dropdown-menu li > a:hover,
@@ -260,14 +256,23 @@ form > table > thead > tr > td > ul {
 	border-top: 0px;
 }
 
+.table thead tr td,
+.table tfoot tr td {
+	vertical-align: middle;
+}
 
-.kfrontend h1,
-.kfrontend h2,
-.kfrontend h3,
-.kfrontend h4,
-.kfrontend h5,
-.kfrontend h6 {
-	margin: 5px !important;
+.kfrontend .table td {
+	padding: 10px;
+}
+
+.kfrontend .table td h1,
+.kfrontend .table td  h2,
+.kfrontend .table td h3,
+.kfrontend .table td h4,
+.kfrontend .table td h5,
+.kfrontend .table td h6 {
+	margin: 0px !important;
+	line-height: 20px;
 }
 
 ul li {
@@ -293,7 +298,7 @@ ul li {
 }
 
 .topictitle {
-	font-size: 120%;
+	font-size: 110%;
 }
 
 .replies, .repliesnum {
@@ -301,7 +306,8 @@ ul li {
 }
 
 .breadcrumb {
-	padding: 8px 15px;
+	padding: 0;
+	background-color: transparent;
 }
 
 input[type='checkbox'] {
@@ -318,12 +324,6 @@ a:focus,
 .qreply {
 	min-height: 150px !important;
 	width: 98%;
-}
-
-.padding-table,
-.last-post,
-.header-desc {
-	padding: 4px 8px;
 }
 
 .desc {
@@ -556,35 +556,14 @@ div.navbar > div > div.visible-phone.hidden-tablet > ul {
 }
 
 select#mode {
-	margin-left: 65px;
+	margin-left: 69px;
 }
-
 
 .img-thumbnail {
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
 	border:1px solid #ddd;
-}
-
-#recent-topics  {
-	.last-posts {
-		vertical-align:middle;
-		left:25px;
-		position: relative;
-	}
-	.span2 	.img-thumbnail {
-		position: absolute;
-		margin-top: -5px;
-	}
-}
-
-#category-index .row-fluid {
-	.img-thumbnail {
-		margin-right: 10px;
-		vertical-align:text-top;
-	}
-	min-width: 260px;
 }
 
 .row-fluid {
@@ -659,12 +638,10 @@ table .well {
 	}
 }
 
-.table td {
-	vertical-align: middle;
-}
 .profilebox {
 	margin-top: -5px;
 }
+
 .profile-horizontal-top {
 	padding: 10px 5px 5px 5px;
 	border-bottom: 1px  solid #ddd;
@@ -673,6 +650,7 @@ table .well {
 	margin-bottom: 10px;
 	min-height: 110px;
 }
+
 .profile-horizontal-bottom {
 	padding: 10px 5px 5px 5px;
 	border-top: 1px  solid #ddd;
@@ -684,6 +662,7 @@ table .well {
 .table .pagination  {
 	max-height: 15px;
 }
+
 .dropdown-menu .form-inline {
 	margin: 15px 0;
 }
@@ -692,11 +671,40 @@ table .well {
 	margin:0;
 }
 
-.inline > li {
+.kfrontend .inline > li {
 	float:left;
-	padding-right: 5px;
+	padding-right: 20px;
+	list-style: disc;
 }
 
 #kbbcode-poll-options {
 	margin: 20px 0;
+}
+
+.collapse .table {
+	margin-bottom:0px;
+}
+
+h2 .pull-right select {
+	line-height: 40px;
+	margin: 0;
+}
+
+.pagination {
+	margin: 0;
+	padding: 0;
+}
+
+.pagination ul > li {
+	display: inline;
+}
+
+.pagination ul > li > a,
+.pagination ul > li > span {
+	float: left;
+	padding: 4px 12px;
+	line-height: 20px;
+	background-color: transparent;
+	border: 1px solid #dddddd;
+	margin: 0;
 }
