Update html (part2)

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -281,6 +281,7 @@ ul li {
 
 .kbuttons .inline {
 	padding: 5px 0;
+	margin-left: 0;
 	clear: both;
 	li {
 		padding: 0;
@@ -707,4 +708,9 @@ h2 .pull-right select {
 	background-color: transparent;
 	border: 1px solid #dddddd;
 	margin: 0;
+}
+
+#recent-topics img.img-thumbnail {
+	vertical-align: text-top;
+	margin-right: 10px;
 }
