--- a/components/com_kunena/admin/media/css/joomla30/layout.css
+++ b/components/com_kunena/admin/media/css/joomla30/layout.css
@@ -8,17 +8,17 @@
  **/
 
 #kunena.admin.override {
-    font-size: 13px;
+	font-size: 13px;
 }
 
 #kunena.admin.override select,
 #kunena.admin.override input[type="file"] {
-    height: auto;
-    line-height: 30px;
+	height: auto;
+	line-height: 30px;
 }
 
 #kunena.admin.override li {
-    line-height: 20px;
+	line-height: 20px;
 }
 
 #kunena.admin.override fieldset input,
@@ -26,56 +26,80 @@
 #kunena.admin.override fieldset select,
 #kunena.admin.override fieldset img,
 #kunena.admin.override fieldset button {
-    float: none;
-    margin: 0;
+	float: none;
+	margin: 0;
 }
 
 #kunena.admin.override label {
-    display: inline !important;
+	display: inline !important;
 }
 
 #kunena.admin.override .center {
-    float: none;
-    margin-left: 0;
-    margin-right: 0;
+	float: none;
+	margin-left: 0;
+	margin-right: 0;
 }
 
 #kunena.admin.override .select-filter {
-    margin-bottom: 0;
-    width: auto;
+	margin-bottom: 0;
+	width: auto;
 }
 
 #kunena.admin.override .input-filter {
-     margin-bottom: 0;
- }
+	margin-bottom: 0;
+}
 
 #kunena.admin.override #dashboard-icons.btn-group {
-    white-space: normal;
+	white-space: normal;
 }
 
 #kunena.admin.override #dashboard-icons .btn {
-    border-radius: 3px;
-    min-height: 64px;
-    min-width: 72px;
-    overflow: hidden;
+	border-radius: 3px;
+	min-height: 64px;
+	min-width: 72px;
+	overflow: hidden;
+	background-color: transparent;
+}
+
+#kunena.admin.override #dashboard-icons .btn:hover {
+	background-color: #EDEDED;
 }
 
 /*All wells in tables should not have margin*/
 #kunena.admin.override table .well {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 #kunena.admin.override .filter-state {
-    font-size: 150%;
+	font-size: 150%;
 }
 
 #kunena.admin.override .filter-state .btn {
-    padding: 0 6px;
-    vertical-align: inherit;
-    font-size: inherit;
-    line-height: 150%
+	padding: 0 6px;
+	vertical-align: inherit;
+	font-size: inherit;
+	line-height: 150%
 }
+
 /* Fix span1 width isis */
 #adminForm > fieldset > table > tbody > tr:nth-child(2) > td:nth-child(2) > div {
-	display:inline !important;
+	display: inline !important;
+}
+
+.well.well-small {
+	background-color: transparent !important;
+	min-height: 123px;
+}
+
+ul.pull-left li {
+	list-style: none;
+}
+
+.nav-header img {
+	padding-bottom: 10px;
+}
+
+div.span7 .module-title.nav-header,
+div.span10 .module-title.nav-header {
+	padding: 3px 0 0 5px;
 }
