Fix menu and some mobile view fixes

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -729,3 +729,7 @@ div.btn-toolbar .font-size-is-default {
 	font-size: 16px;
 	line-height: 1.7em;
 }
+
+.btn [class^='icon-'].icon-large, .btn [class*=' icon-'].icon-large, .nav [class^='icon-'].icon-large, .nav [class*=' icon-'].icon-large {
+	line-height: 1.5em;
+}
