--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -47,7 +47,10 @@ input[type='radio']:focus,
 input[type='checkbox']:focus {
 	outline: 0 !important;
 }
-
+h2 {
+	padding-bottom: 2%;
+	margin-bottom: 10px;
+}
 .kgooglemap {
 	width: 100%;
 	display: block;
@@ -80,7 +83,7 @@ input[type='checkbox']:focus {
 }
 
 .navbar-inner {
-	padding-left: 0px;
+	padding: 0;
 }
 
 .navbar .nav > li > a {
@@ -666,7 +669,7 @@ table .well {
 }
 
 .dropdown-menu .form-inline {
-	margin: 15px 0;
+	margin: 0;
 }
 
 .profile-expand .content ul {
@@ -733,3 +736,17 @@ div.btn-toolbar .font-size-is-default {
 .btn [class^='icon-'].icon-large, .btn [class*=' icon-'].icon-large, .nav [class^='icon-'].icon-large, .nav [class*=' icon-'].icon-large {
 	line-height: 1.5em;
 }
+
+select#categorylist {
+	width: auto;
+}
+
+div#editprofile input,
+div#editprofile select,
+div#home input,
+div#home select,
+div#editsettings select {
+	float: left;
+	margin: 0 5px 0 0;
+}
+
