Fix some issues
* fix message number
* edit announcement
* menu

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -418,7 +418,6 @@ div.kmsgtext-article,
 div.kmsgtext-quote,
 div.kmsgtext-hide,
 div.kmsgtext-code,
-.highlight,
 div.kmsgtext-confidential {
 	font-size: 12px;
 	line-height: 18px;
@@ -750,3 +749,20 @@ div#editsettings select {
 	margin: 0 5px 0 0;
 }
 
+.collapse {
+	transition: height 0.01s;
+}
+div.kmsg > li {
+	margin-left: 20px;
+}
+.kcontenttablespacer {
+	border-bottom-color: #BFC3C6;
+}
+
+.krow1-stickymsg {
+	background-color: #FFFFCC;
+}
+
+.krow2-stickymsg {
+	background-color: #FFFFCC;
+}
