--- a/components/com_kunena/site/template/crypsis/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsis/less/mediaqueries.less
@@ -92,6 +92,9 @@
 	.controls {
 		margin-left: 0 !important;
 	}
+	.mobile-user {
+		margin-top: -40px !important;
+	}
 	// COLLAPSIBLE NAVBAR
 	// ------------------
 	// Nav collapse clears brand
