{3.1] Crypsis: Improve mobile view
* Fixes some mobile views
* Removed some inline css
* General improvements

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -766,3 +766,18 @@ div.kmsg > li {
 .krow2-stickymsg {
 	background-color: #FFFFCC;
 }
+
+.navbar-nav {
+	float: left;
+	padding-top: 10px;
+	.btn-link  {
+		color: inherit;
+	}
+}
+
+.dropdown-menu {
+	padding-top: 20px;
+}
+small.text-muted {
+	margin-top:-10px;
+}
