--- a/components/com_kunena/site/template/crypsis/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsis/less/mediaqueries.less
@@ -71,6 +71,13 @@
 		margin-left: 15px;
 		margin-top: 10px;
 	}
+	.input-append input {
+		width: 60%;
+	}
+	form#ktopicsform input,
+	#login-remember {
+		width: auto;
+	}
 }
 
 /* Smartphones to Tablets */
