[K3.1] Crypsis: Login improvements

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -110,10 +110,6 @@ h2 {
 	margin-bottom: 0;
 }
 
-.btn-group {
-	z-index: -1;
-}
-
 .kreply-form {
 	display: none;
 	margin-left: 20px;
@@ -792,10 +788,6 @@ div.kmsg > li {
 	}
 }
 
-.dropdown-menu {
-	padding-top: 20px;
-}
-
 small.text-muted {
 	margin-top: -10px;
 }
@@ -836,4 +828,8 @@ small.text-muted {
 
 #topic-actions {
 	padding-bottom: 10px;
+}
+
+#userdropdown {
+	padding-top: 20px;
 }
