[K3.1] Crypsis: Fix small mobile issues

--- a/components/com_kunena/site/template/crypsis/less/mediaqueries.less
+++ b/components/com_kunena/site/template/crypsis/less/mediaqueries.less
@@ -21,7 +21,7 @@
 	}
 
 	[class*="badger"] {
-		padding: 25% 19px 14px;
+		padding: 30% 19px 14px;
 	}
 
 	.form-search {
@@ -181,7 +181,9 @@
 	.navbar .btn-navbar {
 		display: block;
 	}
-
+	a.modal {
+		position: static;
+	}
 
 }
 
@@ -209,4 +211,3 @@
 @media (min-width: 1200px) {
 
 }
-
