[3.1] Cypsis: Lowercase on credits

--- a/components/com_kunena/site/template/crypsis/less/general.less
+++ b/components/com_kunena/site/template/crypsis/less/general.less
@@ -792,26 +792,26 @@ small.text-muted {
 	margin-top: -10px;
 }
 
-#Credits .dl-horizontal dt {
+#credits .dl-horizontal dt {
 	text-align: left !important;
 	margin-left: 10px;
 }
 
-#Credits .dl-horizontal dd {
+#credits .dl-horizontal dd {
 	margin-left: 160px !important;
 }
 
-#Credits dd,
-#Credits dt {
+#credits dd,
+#credits dt {
 	padding: 5px 0;
 }
 
-#Credits dt {
+#credits dt {
 	font-weight: normal !important;
 }
 
-#Credits .dl-horizontal dt:nth-child(odd),
-#Credits .dl-horizontal dd:nth-child(even) {
+#credits .dl-horizontal dt:nth-child(odd),
+#credits .dl-horizontal dd:nth-child(even) {
 	background-color: #f9f9f9;
 }
 
