[K3.1] Crypsis: Update editor

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -202,6 +202,14 @@ img.kbbcode {
 	background-position: -108px -18px;
 }
 
+#kbbcode-hr-button {
+	background-position: -290px -18px;
+}
+
+#kbbcode-tweet-button {
+	background-position: -310px -18px;
+}
+
 #kbbcode-separator1,
 #kbbcode-separator2,
 #kbbcode-separator3,
@@ -295,6 +303,10 @@ img.kbbcode:hover {
 
 #kbbcode-smilies-button {
 	background-position: -108px -18px;
+}
+
+#kbbcode-preview {
+	height: auto !important;
 }
 
 .kbbcode-preview-bottom {
