Update less editor

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -321,3 +321,48 @@ img.kbbcode:hover {
 label img{
 	pointer-events: none;
 }
+
+.dropzone {
+	position: relative;
+	border: 1px solid rgba(0,0,0,0.08);
+	background: rgba(0,0,0,0.02);
+	padding: 1em;
+}
+.dropzone .message {
+	opacity: 1;
+	-ms-filter: none;
+	filter: none;
+}
+.dropzone {
+	border: 1px solid rgba(0,0,0,0.03);
+	min-height: 120px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	background: rgba(0,0,0,0.03);
+	padding: 23px;
+}
+.dropzone .default.message {
+	opacity: 1;
+	-ms-filter: none;
+	filter: none;
+	-webkit-transition: opacity 0.3s ease-in-out;
+	-moz-transition: opacity 0.3s ease-in-out;
+	-o-transition: opacity 0.3s ease-in-out;
+	-ms-transition: opacity 0.3s ease-in-out;
+	transition: opacity 0.3s ease-in-out;
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	position: absolute;
+	width: 80%;
+	top: 30%;
+	left: 20%;
+}
+#klabel_info_drop_browse {
+	bottom: 0;
+}
+#files {
+	padding-bottom: 10px;
+}
+#files button.btn {
+	margin-right: 5px;
+}
