[K3.1] Crypsis: CS Editor

--- a/components/com_kunena/site/template/crypsis/less/editor.less
+++ b/components/com_kunena/site/template/crypsis/less/editor.less
@@ -53,7 +53,7 @@ img.kbbcode {
 		margin: 0;
 		padding: 0;
 		a {
-			background-image: url("iconsets/editor/default/default.png");
+			background-image: url("../media/iconsets/editor/default/default.png");
 			background-repeat: no-repeat;
 			display: block;
 			height: 18px;
@@ -259,7 +259,7 @@ img.kbbcode:hover {
 #kattachments {
 	line-height: 18px;
 	a {
-		background-image: url("iconsets/editor/default/default.png");
+		background-image: url("../media/iconsets/editor/default/default.png");
 		background-repeat: no-repeat;
 		display: inline-block;
 		height: 18px;
@@ -365,4 +365,7 @@ label img{
 }
 #files button.btn {
 	margin-right: 5px;
+}
+ul#kbbcode-toolbar li a#kbbcode-smilies-button {
+  display: none;
 }
